--- a/labs/lab6/package.json
+++ b/labs/lab6/package.json
@@ -5,28 +5,21 @@
   "dependencies": {
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.2.0",
+    "@testing-library/user-event": "^13.5.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.3.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
-  "jest": {
-    "moduleNameMapper": {
-      "\\.(css|scss)$": "identity-obj-proxy"
-    },
-    "transform": {
-      "^.+\\.(js|jsx)$": "babel-jest"
-    },
-    "transformIgnorePatterns": [
-      "node_modules/(?!(react-router-dom)/)"
-    ]
-  },
+
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "test": "mocha"
   },
   "eslintConfig": {
     "extends": [
@@ -47,12 +40,6 @@
     ]
   },
   "devDependencies": {
-    "@testing-library/react": "^16.2.0",
-    "@testing-library/user-event": "^14.6.1",
-    "chai": "^5.2.0",
-    "identity-obj-proxy": "^3.0.0",
-    "jsdom": "^26.0.0",
-    "jsdom-global": "^3.0.2",
-    "mocha": "^11.1.0"
+    "identity-obj-proxy": "^3.0.0"
   }
 }
